@@ -43,7 +43,6 @@
  */
 
 package org.netbeans.modules.mobility.jsr172.wizard;
-import java.io.ByteArrayOutputStream;
 import java.io.File;
 import java.io.FileNotFoundException;
 import java.io.FileOutputStream;
@@ -54,9 +53,9 @@ import java.awt.Component;
 import java.awt.Dialog;
 import java.io.BufferedOutputStream;
 import java.net.URL;
-import java.text.MessageFormat;
 import java.util.List;
-import java.util.Properties;
+import java.util.logging.Level;
+import java.util.logging.Logger;
 import javax.swing.JPanel;
 import javax.swing.JFileChooser;
 import javax.swing.JRadioButton;
@@ -67,10 +66,7 @@ import javax.swing.ComboBoxModel;
 import javax.swing.DefaultComboBoxModel;
 import javax.swing.text.JTextComponent;
 import org.netbeans.modules.e2e.api.wsdl.wsdl2java.WSDL2JavaFactory;
-import org.netbeans.modules.mobility.jsr172.generator.Jsr172Generator;
-import org.netbeans.modules.mobility.end2end.util.Util;
 import org.openide.DialogDisplayer;
-import org.openide.NotifyDescriptor;
 import org.openide.WizardDescriptor;
 import org.openide.filesystems.FileObject;
 import org.openide.filesystems.FileUtil;
@@ -82,12 +78,9 @@ import org.netbeans.api.project.Project;
 import org.netbeans.api.project.ProjectUtils;
 import org.netbeans.api.project.SourceGroup;
 import org.netbeans.api.project.Sources;
-import org.netbeans.modules.e2e.api.schema.SchemaException;
 import org.netbeans.modules.e2e.api.wsdl.wsdl2java.WSDL2Java;
-import org.netbeans.modules.e2e.wsdl.wsdl2java.WSDL2JavaImpl;
 import org.netbeans.spi.project.ui.templates.support.Templates;
 import org.openide.DialogDescriptor;
-import org.openide.ErrorManager;
 import org.openide.util.RequestProcessor;
 import org.openide.util.Utilities;
 
@@ -98,13 +91,13 @@ import org.openide.util.Utilities;
  */
 public final class ClientInfo extends JPanel implements WsdlRetriever.MessageReceiver {
     
-    private static final String PROP_ERROR_MESSAGE = WizardDescriptor.PROP_ERROR_MESSAGE; // NOI18N
+    private static final String PROP_ERROR_MESSAGE = WizardDescriptor.PROP_ERROR_MESSAGE;
     
     private static final int WSDL_FROM_FILE = 1;
     private static final int WSDL_FROM_SERVICE = 2;
     
     private static final FileFilter WSDL_FILE_FILTER = new WsdlFileFilter();
-    private static String previousDirectory = "";
+    private static String previousDirectory = ""; // NOI18N
     
     final protected WebServiceClientWizardDescriptor descriptorPanel;
     
@@ -118,7 +111,7 @@ public final class ClientInfo extends JPanel implements WsdlRetriever.MessageRec
     
     private RequestProcessor rp;
     
-    private String wsiErrorMsg;
+//    private String wsiErrorMsg;
     private boolean wsdlValidated = false;
     protected boolean wsdlValid = false;
     protected boolean validating = false;
@@ -127,31 +120,31 @@ public final class ClientInfo extends JPanel implements WsdlRetriever.MessageRec
     
     public ClientInfo(WebServiceClientWizardDescriptor panel) {
         descriptorPanel = panel;
-        
+
         this.settingFields = false;
         this.wsdlSource = WSDL_FROM_SERVICE;
         this.retriever = null;
-        
+
         initComponents();
         initUserComponents();
-        
+
         initAccessibility();
     }
-    
+
     private void initAccessibility() {
-        getAccessibleContext().setAccessibleName( NbBundle.getMessage( ClientInfo.class, "ACSN_Web_Service_Client_Wizard" ));
-        getAccessibleContext().setAccessibleDescription( NbBundle.getMessage( ClientInfo.class, "ACSD_Web_Service_Client_Wizard" ));
-        
-        jRbnServiceURL.getAccessibleContext().setAccessibleDescription( NbBundle.getMessage( ClientInfo.class, "ACSD_WsdlSourceUrl" ));
-        jRbnFilesystem.getAccessibleContext().setAccessibleDescription( NbBundle.getMessage( ClientInfo.class, "ACSD_WsdlSourceFilesystem" ));
-        
-        jTxtProject.getAccessibleContext().setAccessibleDescription( NbBundle.getMessage( ClientInfo.class, "ACSD_Project" ));
-        jTxtLocalFilename.getAccessibleContext().setAccessibleDescription( NbBundle.getMessage( ClientInfo.class, "ACSD_LocalFilename" ));
-        jTxtCreatedFile.getAccessibleContext().setAccessibleDescription( NbBundle.getMessage( ClientInfo.class, "ACSD_CreatedFile" ));
-        
-        jBtnBrowse.getAccessibleContext().setAccessibleDescription( NbBundle.getMessage( ClientInfo.class, "ACSD_Browse" ));
+        getAccessibleContext().setAccessibleName(NbBundle.getMessage(ClientInfo.class, "ACSN_Web_Service_Client_Wizard")); // NOI18N
+        getAccessibleContext().setAccessibleDescription(NbBundle.getMessage(ClientInfo.class, "ACSD_Web_Service_Client_Wizard")); // NOI18N
+
+        jRbnServiceURL.getAccessibleContext().setAccessibleDescription(NbBundle.getMessage(ClientInfo.class, "ACSD_WsdlSourceUrl")); // NOI18N
+        jRbnFilesystem.getAccessibleContext().setAccessibleDescription(NbBundle.getMessage(ClientInfo.class, "ACSD_WsdlSourceFilesyst")); // NOI18N
+
+        jTxtProject.getAccessibleContext().setAccessibleDescription(NbBundle.getMessage(ClientInfo.class, "ACSD_Project")); // NOI18N
+        jTxtLocalFilename.getAccessibleContext().setAccessibleDescription(NbBundle.getMessage(ClientInfo.class, "ACSD_LocalFilename")); // NOI18N
+        jTxtCreatedFile.getAccessibleContext().setAccessibleDescription(NbBundle.getMessage(ClientInfo.class, "ACSD_CreatedFile")); // NOI18N
+
+        jBtnBrowse.getAccessibleContext().setAccessibleDescription(NbBundle.getMessage(ClientInfo.class, "ACSD_Browse")); // NOI18N
     }
-    
+
     /** This method is called from within the constructor to
      * initialize the form.
      * WARNING: Do NOT modify this code. The content of this method is
@@ -402,55 +395,59 @@ public final class ClientInfo extends JPanel implements WsdlRetriever.MessageRec
         gridBagConstraints.weighty = 1.0;
         add(jPanel1, gridBagConstraints);
     }// </editor-fold>//GEN-END:initComponents
-    
+
     private void jBtnProxyActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_jBtnProxyActionPerformed
         OptionsDisplayer.getDefault().open( "General" );//NOI18N//GEN-LAST:event_jBtnProxyActionPerformed
-    }                                         
-    
+    }
+
     private void jBtnGetWsdlActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_jBtnGetWsdlActionPerformed
         jTxtWsdlURL.setEditable(false);//GEN-LAST:event_jBtnGetWsdlActionPerformed
         wsdlValidated = false;
         retriever = new WsdlRetriever(this, jTxtWsdlURL.getText().trim());
-        if (rp == null){
-            rp  = new RequestProcessor();
+        if (rp == null) {
+            rp = new RequestProcessor("jsr172"); // NOI18N
         }
         rp.post(retriever);
-    }                                           
-    
+    }
+
 	private void jBtnBrowseActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_jBtnBrowseActionPerformed
             final JFileChooser chooser = new JFileChooser(previousDirectory);
             chooser.setMultiSelectionEnabled(false);
             chooser.setAcceptAllFileFilterUsed(false);
             chooser.addChoosableFileFilter(WSDL_FILE_FILTER);
             chooser.setFileFilter(WSDL_FILE_FILTER);
-            
+
             if(chooser.showOpenDialog(this) == JFileChooser.APPROVE_OPTION) {//GEN-LAST:event_jBtnBrowseActionPerformed
-                wsdlValidated = false;
-                final File wsdlFile = chooser.getSelectedFile();
-                jTxtWsdlFile.setText(wsdlFile.getAbsolutePath());
-                previousDirectory = wsdlFile.getPath();
-                updateHelperValues();
+            wsdlValidated = false;
+            final File wsdlFile = chooser.getSelectedFile();
+            // #201960
+            if (wsdlFile == null) {
+                return;
             }
-	}                                          
-        
+            jTxtWsdlFile.setText(wsdlFile.getAbsolutePath());
+            previousDirectory = wsdlFile.getPath();
+            updateHelperValues();
+        }
+    }
+
     private void jRbnFilesystemActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_jRbnFilesystemActionPerformed
         wsdlSource = WSDL_FROM_FILE;//GEN-LAST:event_jRbnFilesystemActionPerformed
         enableWsdlSourceFields(false, true);
         descriptorPanel.fireChangeEvent();
-    }                                              
-    
+    }
+
 	private void jRbnServiceURLActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_jRbnServiceURLActionPerformed
             wsdlSource = WSDL_FROM_SERVICE;//GEN-LAST:event_jRbnServiceURLActionPerformed
-            enableWsdlSourceFields(true, false);
-            descriptorPanel.fireChangeEvent();
-	}                                              
-        
+        enableWsdlSourceFields(true, false);
+        descriptorPanel.fireChangeEvent();
+    }
+
     private void enableWsdlSourceFields(final boolean fromService, final boolean fromFile) {
         // file related fields
         jLblWsdlFile.setEnabled(fromFile);
         jTxtWsdlFile.setEnabled(fromFile);
         jBtnBrowse.setEnabled(fromFile);
-        
+
         // service related fields
         jLblLocalFNDescription.setEnabled(fromService);
         jLblWsdlURL.setEnabled(fromService);
@@ -461,7 +458,7 @@ public final class ClientInfo extends JPanel implements WsdlRetriever.MessageRec
         jLblLocalFilename.setEnabled(fromService);
         jTxtLocalFilename.setEnabled(fromService);
     }
-        
+    
     // Variables declaration - do not modify//GEN-BEGIN:variables
     private javax.swing.ButtonGroup btnGrpWsdlSource;
     private javax.swing.JButton jBtnBrowse;
@@ -491,68 +488,95 @@ public final class ClientInfo extends JPanel implements WsdlRetriever.MessageRec
     private javax.swing.JTextField jTxtWsdlFile;
     private javax.swing.JTextField jTxtWsdlURL;
     // End of variables declaration//GEN-END:variables
-    
+
     private void initUserComponents() {
 //        System.out.println("wizard panel created");
         setName(NbBundle.getMessage(ClientInfo.class, "TITLE_WebServiceClientWizard")); // NOI18N
-        
+
         // Register listener on the textFields to make the automatic updates
         jTxtWsdlURL.getDocument().addDocumentListener(new DocumentListener() {
-            public void changedUpdate(@SuppressWarnings("unused") DocumentEvent e) {
+            @Override
+            public void changedUpdate(@SuppressWarnings("unused") DocumentEvent e) { // NOI18N
                 wsdlUrlChanged();
             }
-            public void insertUpdate(@SuppressWarnings("unused") DocumentEvent e) {
+
+            @Override
+            public void insertUpdate(@SuppressWarnings("unused") DocumentEvent e) { // NOI18N
                 wsdlUrlChanged();
             }
-            public void removeUpdate(@SuppressWarnings("unused") DocumentEvent e) {
+
+            @Override
+            public void removeUpdate(@SuppressWarnings("unused") DocumentEvent e) { // NOI18N
                 wsdlUrlChanged();
             }
         });
-        
+
         jTxtLocalFilename.getDocument().addDocumentListener(new DocumentListener() {
-            public void changedUpdate(@SuppressWarnings("unused") DocumentEvent e) {
+            @Override
+            public void changedUpdate(@SuppressWarnings("unused") DocumentEvent e) { // NOI18N
                 updateTexts();
             }
-            public void insertUpdate(@SuppressWarnings("unused") DocumentEvent e) {
+
+            @Override
+            public void insertUpdate(@SuppressWarnings("unused") DocumentEvent e) { // NOI18N
                 updateTexts();
             }
-            public void removeUpdate(@SuppressWarnings("unused") DocumentEvent e) {
+
+            @Override
+            public void removeUpdate(@SuppressWarnings("unused") DocumentEvent e) { // NOI18N
                 updateTexts();
             }
         });
         jTxtWsdlFile.getDocument().addDocumentListener(new DocumentListener() {
-            public void changedUpdate(@SuppressWarnings("unused") DocumentEvent e) {
+            @Override
+            public void changedUpdate(@SuppressWarnings("unused") DocumentEvent e) { // NOI18N
                 updateTexts();
             }
-            public void insertUpdate(@SuppressWarnings("unused") DocumentEvent e) {
+
+            @Override
+            public void insertUpdate(@SuppressWarnings("unused") DocumentEvent e) { // NOI18N
                 updateTexts();
             }
-            public void removeUpdate(@SuppressWarnings("unused") DocumentEvent e) {
+
+            @Override
+            public void removeUpdate(@SuppressWarnings("unused") DocumentEvent e) { // NOI18N
                 updateTexts();
             }
         });
         jTxtClientName.getDocument().addDocumentListener(new DocumentListener() {
-            public void changedUpdate(@SuppressWarnings("unused") DocumentEvent e) {
+
+            @Override
+            public void changedUpdate(@SuppressWarnings("unused") DocumentEvent e) { // NOI18N
                 updateTexts();
             }
-            public void insertUpdate(@SuppressWarnings("unused") DocumentEvent e) {
+
+            @Override
+            public void insertUpdate(@SuppressWarnings("unused") DocumentEvent e) { // NOI18N
                 updateTexts();
             }
-            public void removeUpdate(@SuppressWarnings("unused") DocumentEvent e) {
+
+            @Override
+            public void removeUpdate(@SuppressWarnings("unused") DocumentEvent e) { // NOI18N
                 updateTexts();
             }
         });
-        
+
         final Component editorComponent = jCbxPackageName.getEditor().getEditorComponent();
-        if(editorComponent instanceof JTextComponent) {
+        if (editorComponent instanceof JTextComponent) {
             ((JTextComponent) editorComponent).getDocument().addDocumentListener(new DocumentListener() {
-                public void changedUpdate(@SuppressWarnings("unused") DocumentEvent e) {
+
+                @Override
+                public void changedUpdate(@SuppressWarnings("unused") DocumentEvent e) { // NOI18N
                     updateTexts();
                 }
-                public void insertUpdate(@SuppressWarnings("unused") DocumentEvent e) {
+
+                @Override
+                public void insertUpdate(@SuppressWarnings("unused") DocumentEvent e) { // NOI18N
                     updateTexts();
                 }
-                public void removeUpdate(@SuppressWarnings("unused") DocumentEvent e) {
+
+                @Override
+                public void removeUpdate(@SuppressWarnings("unused") DocumentEvent e) { // NOI18N
                     updateTexts();
                 }
             });
@@ -560,89 +584,91 @@ public final class ClientInfo extends JPanel implements WsdlRetriever.MessageRec
             // JComboBox is supposed to use a JTextComponent for editing, but in case
             // it isn't, at least do something to track changes.
             jCbxPackageName.addItemListener(new java.awt.event.ItemListener() {
-                public void itemStateChanged(@SuppressWarnings("unused") java.awt.event.ItemEvent evt) {
-                    if(!settingFields) {
+
+                @Override
+                public void itemStateChanged(@SuppressWarnings("unused") java.awt.event.ItemEvent evt) { // NOI18N
+                    if (!settingFields) {
                         descriptorPanel.fireChangeEvent(); // Notify that the panel changed
                     }
                 }
             });
         }
-        
+
         jCbxPackageName.setRenderer(PackageView.listRenderer());
     }
-    
-    void store (final WizardDescriptor d) {
-        if(wsdlSource == WSDL_FROM_SERVICE) {
+
+    void store(final WizardDescriptor d) {
+        if (wsdlSource == WSDL_FROM_SERVICE) {
             d.putProperty(WebServiceClientWizardIterator.WSDL_DOWNLOAD_URL, getDownloadUrl());
             d.putProperty(WebServiceClientWizardIterator.WSDL_DOWNLOAD_FILE, getDownloadWsdl());
             d.putProperty(WebServiceClientWizardIterator.WSDL_FILE_PATH, jTxtLocalFilename.getText().trim());
-        } else if(wsdlSource == WSDL_FROM_FILE) {
+        } else if (wsdlSource == WSDL_FROM_FILE) {
             d.putProperty(WebServiceClientWizardIterator.WSDL_DOWNLOAD_URL, null);
             d.putProperty(WebServiceClientWizardIterator.WSDL_DOWNLOAD_FILE, null);
             d.putProperty(WebServiceClientWizardIterator.WSDL_FILE_PATH, jTxtWsdlFile.getText().trim());
         }
         d.putProperty(WebServiceClientWizardIterator.WSDL_PACKAGE_NAME, getPackageName());
         d.putProperty(WebServiceClientWizardIterator.JSR172_CLIENT_NAME, jTxtClientName.getText().trim());
-        d.putProperty( WebServiceClientWizardIterator.PROP_DATABINDING, new Boolean( jCheckGenerateDataBinding.isSelected()));
+        d.putProperty(WebServiceClientWizardIterator.PROP_DATABINDING, jCheckGenerateDataBinding.isSelected());
     }
-    
+
     void read(final WizardDescriptor d) {
         try {
             settingFields = true;
-            
+
             final Project p = Templates.getProject(d);
-            
+
             jTxtProject.setText(ProjectUtils.getInformation(p).getDisplayName());
             jTxtWsdlURL.setText((String) d.getProperty(WebServiceClientWizardIterator.WSDL_DOWNLOAD_URL));
-            jTxtLocalFilename.setText(retriever != null ? retriever.getWsdlFileName() : "");
-            jTxtClientName.setText(d.getProperty(WebServiceClientWizardIterator.JSR172_CLIENT_NAME) != null ?
-                (String)d.getProperty(WebServiceClientWizardIterator.JSR172_CLIENT_NAME) : "");
+            jTxtLocalFilename.setText(retriever != null ? retriever.getWsdlFileName() : ""); // NOI18N
+            jTxtClientName.setText(d.getProperty(WebServiceClientWizardIterator.JSR172_CLIENT_NAME) != null
+                    ? (String) d.getProperty(WebServiceClientWizardIterator.JSR172_CLIENT_NAME) : ""); // NOI18N
             jTxtWsdlFile.setText((String) d.getProperty(WebServiceClientWizardIterator.WSDL_FILE_PATH));
-            
+
             jCbxPackageName.setModel(getPackageModel(p));
             jCbxPackageName.setSelectedItem(getPackageItem((String) d.getProperty(WebServiceClientWizardIterator.WSDL_PACKAGE_NAME)));
-            
+
             final Sources sources = p.getLookup().lookup(Sources.class);
-            final SourceGroup sg = sources.getSourceGroups( JavaProjectConstants.SOURCES_TYPE_JAVA )[0]; //only one source root for mobile project
+            final SourceGroup sg = sources.getSourceGroups(JavaProjectConstants.SOURCES_TYPE_JAVA)[0]; //only one source root for mobile project
             root = sg.getRootFolder();
             final Object sel = jCbxPackageName.getSelectedItem();
-            final String created = FileUtil.toFile(root).getAbsolutePath() +
-                    "/" + ((sel != null) ? (sel.toString().replace('.', '/')) : "") +
-                    "/" + jTxtClientName.getText().replace('.', '/');
-            jTxtCreatedFile.setText( created + ".wsclient");
+            final String created = FileUtil.toFile(root).getAbsolutePath()
+                    + "/" + ((sel != null) ? (sel.toString().replace('.', '/')) : "") // NOI18N
+                    + "/" + jTxtClientName.getText().replace('.', '/'); // NOI18N
+            jTxtCreatedFile.setText(created + ".wsclient"); // NOI18N
             // Normalize selection, in case it's unspecified.
             Integer source = (Integer) d.getProperty(WebServiceClientWizardIterator.WSDL_SOURCE);
-            if(source == null || source.intValue() < WSDL_FROM_SERVICE || source.intValue() > WSDL_FROM_FILE) {
+            if (source == null || source.intValue() < WSDL_FROM_SERVICE || source.intValue() > WSDL_FROM_FILE) {
                 source = new Integer(WSDL_FROM_SERVICE);
             }
-            
+
             this.wsdlSource = source.intValue();
             this.retriever = null;
             this.downloadMsg = null;
-            if (rp != null){
+            if (rp != null) {
                 rp.stop();
             }
             rp = null;
             enableWsdlSourceFields(wsdlSource == WSDL_FROM_SERVICE, wsdlSource == WSDL_FROM_FILE);
             btnGrpWsdlSource.setSelected(getSelectedRadioButton(wsdlSource).getModel(), true);
-            
-            final Boolean b = (Boolean) d.getProperty( WebServiceClientWizardIterator.PROP_DATABINDING );
-            if( b != null && b.booleanValue()) {
-                jCheckGenerateDataBinding.setSelected( true );
+
+            final Boolean b = (Boolean) d.getProperty(WebServiceClientWizardIterator.PROP_DATABINDING);
+            if (b != null && b.booleanValue()) {
+                jCheckGenerateDataBinding.setSelected(true);
             } else {
-                jCheckGenerateDataBinding.setSelected( false );
-            }                        
+                jCheckGenerateDataBinding.setSelected(false);
+            }
         } finally {
             settingFields = false;
         }
     }
-    
+
     private ComboBoxModel getPackageModel(final Project p) {
         ComboBoxModel result;
         final Sources sources = ProjectUtils.getSources(p);
         final SourceGroup[] groups = sources.getSourceGroups(JavaProjectConstants.SOURCES_TYPE_JAVA);
-        
-        if(groups.length > 1) {
+
+        if (groups.length > 1) {
 // !PW We cannot make the distinction between source and test source roots, so I don't
 // want to merge all the packages at this time.  For now, just pick the first one,
 // and maybe we can do better in the next version.
@@ -656,40 +682,40 @@ public final class ClientInfo extends JPanel implements WsdlRetriever.MessageRec
 //            result = packageModel;
             // Default to showing packages from first source root only for now.
             result = PackageView.createListView(groups[0]);
-        } else if(groups.length == 1) {
+        } else if (groups.length == 1) {
             // Only one group, no processing needed.
             result = PackageView.createListView(groups[0]);
         } else {
             result = new DefaultComboBoxModel();
         }
-        
+
         return result;
     }
-    
+
     private Object getPackageItem(final String name) {
         Object result = name;
-        
+
         final ComboBoxModel model = jCbxPackageName.getModel();
         final int max = model.getSize();
         for (int i = 0; i < max; i++) {
             final Object item = model.getElementAt(i);
-            if(item.toString().equals(name)) {
+            if (item.toString().equals(name)) {
                 result = item;
                 break;
             }
         }
-        
+
         return result;
     }
-    
+
     private String getPackageName() {
         return jCbxPackageName.getEditor().getItem().toString().trim();
     }
-    
+
     private JRadioButton getSelectedRadioButton(final int selected) {
         JRadioButton result = jRbnServiceURL;
-        
-        switch(selected) {
+
+        switch (selected) {
             case WSDL_FROM_FILE:
                 result = jRbnFilesystem;
                 break;
@@ -697,22 +723,22 @@ public final class ClientInfo extends JPanel implements WsdlRetriever.MessageRec
                 result = jRbnServiceURL;
                 break;
         }
-        
+
         return result;
     }
-    
-    protected byte [] getDownloadWsdl() {
-        byte [] result = null;
-        if(retriever != null && retriever.getState() == WsdlRetriever.STATUS_COMPLETE) {
+
+    protected byte[] getDownloadWsdl() {
+        byte[] result = null;
+        if (retriever != null && retriever.getState() == WsdlRetriever.STATUS_COMPLETE) {
             result = retriever.getWsdl();
         }
         return result;
     }
-    
+
     private String getDownloadUrl() {
         String result;
-        
-        if(retriever != null) {
+
+        if (retriever != null) {
             // If we've done a download, save the URL that was actually used, not
             // what the user typed in.
             result = retriever.getWsdlUrl();
@@ -720,98 +746,100 @@ public final class ClientInfo extends JPanel implements WsdlRetriever.MessageRec
             // If no download yet, then use what the user has typed.
             result = jTxtWsdlURL.getText().trim();
         }
-        
+
         return result;
     }
-    
+
     synchronized boolean valid(final WizardDescriptor wizardDescriptor) {
         final Project p = Templates.getProject(wizardDescriptor);
-        
+
         // Project must currently have a target server that supports wscompile.
-        if(!isWsCompileSupported(p)) {
+        if (!isWsCompileSupported(p)) {
             wizardDescriptor.putProperty(PROP_ERROR_MESSAGE, NbBundle.getMessage(ClientInfo.class, "ERR_WsCompileNotSupportedByTargetServer")); // NOI18N
             return false; // project with web service client support, but no stub types defined.
         }
-        
-        if(wsdlSource == WSDL_FROM_SERVICE) {
+
+        if (wsdlSource == WSDL_FROM_SERVICE) {
             final String wsdlUrl = jTxtWsdlURL.getText().trim();
-            if(wsdlUrl == null || wsdlUrl.length() == 0) {
+            if (wsdlUrl == null || wsdlUrl.length() == 0) {
                 wizardDescriptor.putProperty(PROP_ERROR_MESSAGE, NbBundle.getMessage(ClientInfo.class, "MSG_EnterURL")); // NOI18N
                 return false;
             }
-            
-            if(retriever == null) {
+
+            if (retriever == null) {
                 wizardDescriptor.putProperty(PROP_ERROR_MESSAGE, NbBundle.getMessage(ClientInfo.class, "MSG_RetrieveWSDL")); // NOI18N
                 return false;
             }
-            
-            if(retriever.getState() < WsdlRetriever.STATUS_COMPLETE) {
-                wizardDescriptor.putProperty(PROP_ERROR_MESSAGE, NbBundle.getMessage(ClientInfo.class, "MSG_DownloadProgress",  // NOI18N
+
+            if (retriever.getState() < WsdlRetriever.STATUS_COMPLETE) {
+                wizardDescriptor.putProperty(PROP_ERROR_MESSAGE, NbBundle.getMessage(ClientInfo.class, "MSG_DownloadProgress", // NOI18N
                         ((downloadMsg != null) ? downloadMsg : NbBundle.getMessage(ClientInfo.class, "LBL_Unknown")))); // NOI18N
                 return false;
             }
-            
-            if(retriever.getState() > WsdlRetriever.STATUS_COMPLETE) {
-                if(downloadMsg != null) {
+
+            if (retriever.getState() > WsdlRetriever.STATUS_COMPLETE) {
+                if (downloadMsg != null) {
                     wizardDescriptor.putProperty(PROP_ERROR_MESSAGE, NbBundle.getMessage(ClientInfo.class, "ERR_DownloadFailed", downloadMsg)); // NOI18N
                 } else {
                     wizardDescriptor.putProperty(PROP_ERROR_MESSAGE, NbBundle.getMessage(ClientInfo.class, "ERR_DownloadFailedUnknown")); // NOI18N
                 }
                 return false;
             }
-            
-            if (!wsdlValidated && !validating){
+
+            if (!wsdlValidated && !validating) {
                 wsdlValidated = true;
                 validating = true;
                 if (validatingRP == null) {
                     validatingRP = new RequestProcessor();
                 }
                 validatingRP.post(new Runnable() {
+
+                    @Override
                     public void run() {
 //                        wsdlValid = isWSICompliant(getDownloadWsdl());
-                        wsdlValid = checkJSR172Compliant( getDownloadWsdl());
+                        wsdlValid = checkJSR172Compliant(getDownloadWsdl());
                         validating = false;
                         descriptorPanel.fireChangeEvent();
                     }
                 }, 300);
             }
-            
-            if (validating){
+
+            if (validating) {
                 wizardDescriptor.putProperty(PROP_ERROR_MESSAGE,
-                        NbBundle.getMessage(WebServiceClientWizardDescriptor.class,"MSG_Validating", jTxtLocalFilename.getText()));
+                        NbBundle.getMessage(WebServiceClientWizardDescriptor.class, "MSG_Validating", jTxtLocalFilename.getText())); // NOI18N
                 return false;
             }
-            
-            if (!wsdlValid){
+
+            if (!wsdlValid) {
                 wizardDescriptor.putProperty(PROP_ERROR_MESSAGE,
-                        NbBundle.getMessage(WebServiceClientWizardDescriptor.class,"MSG_NotWSI", jTxtLocalFilename.getText()));
+                        NbBundle.getMessage(WebServiceClientWizardDescriptor.class, "MSG_NotWSI", jTxtLocalFilename.getText())); // NOI18N
                 return false;
             }
-            
+
             // url is ok, and file is downloaded if we get here.  Now check generated local filename
             // !PW FIXME what do we want to check it for?  Existence in temp directory?
-            
+
             // Now drop down to do package validation.
-        } else if(wsdlSource == WSDL_FROM_FILE) {
+        } else if (wsdlSource == WSDL_FROM_FILE) {
             final String wsdlFilePath = jTxtWsdlFile.getText().trim();
-            
-            if(wsdlFilePath == null || wsdlFilePath.length() == 0) {
+
+            if (wsdlFilePath == null || wsdlFilePath.length() == 0) {
                 wizardDescriptor.putProperty(PROP_ERROR_MESSAGE, NbBundle.getMessage(ClientInfo.class, "MSG_EnterFilename")); // NOI18N
                 return false; // unspecified WSDL file
             }
-            
+
             final File f = new File(wsdlFilePath);
-            if(f == null) {
+            if (f == null) {
                 wizardDescriptor.putProperty(PROP_ERROR_MESSAGE, NbBundle.getMessage(ClientInfo.class, "ERR_WsdlInvalid")); // NOI18N
                 return false; // invalid WSDL file
             }
-            
-            if(!f.exists()) {
+
+            if (!f.exists()) {
                 wizardDescriptor.putProperty(PROP_ERROR_MESSAGE, NbBundle.getMessage(ClientInfo.class, "ERR_WsdlDoesNotExist")); // NOI18N
                 wsdlValidated = false;
                 return false; // invalid WSDL file
             }
-            
+
             // 50103 - could be done via xml api, but this way should be quicker and suffice the need
             FileReader fr = null;
             try {
@@ -825,7 +853,7 @@ public final class ClientInfo extends JPanel implements WsdlRetriever.MessageRec
                         //ignore
                     }
                     while (line != null) {
-                        if (line.indexOf("REPLACE_WITH_ACTUAL_URL") > 0) {
+                        if (line.indexOf("REPLACE_WITH_ACTUAL_URL") > 0) { // NOI18N
                             wizardDescriptor.putProperty(PROP_ERROR_MESSAGE, NbBundle.getMessage(ClientInfo.class, "ERR_WrongWsdl")); // NOI18N
                             return false;
                         } //NOI18N
@@ -839,30 +867,32 @@ public final class ClientInfo extends JPanel implements WsdlRetriever.MessageRec
             } catch (FileNotFoundException fne) {
                 wizardDescriptor.putProperty(PROP_ERROR_MESSAGE, NbBundle.getMessage(ClientInfo.class, "ERR_WsdlDoesNotExist")); // NOI18N
             }
-            
-            if (!wsdlValidated && !validating){
+
+            if (!wsdlValidated && !validating) {
                 wsdlValidated = true;
                 validating = true;
                 if (validatingRP == null) {
                     validatingRP = new RequestProcessor();
                 }
                 validatingRP.post(new Runnable() {
+
+                    @Override
                     public void run() {
-                        wsdlValid = checkJSR172Compliant( f );
+                        wsdlValid = checkJSR172Compliant(f);
                         validating = false;
                         descriptorPanel.fireChangeEvent();
                     }
                 }, 300);
             }
-            if (validating){
+            if (validating) {
                 wizardDescriptor.putProperty(PROP_ERROR_MESSAGE,
-                        NbBundle.getMessage(WebServiceClientWizardDescriptor.class,"MSG_Validating", jTxtLocalFilename.getText()));
+                        NbBundle.getMessage(WebServiceClientWizardDescriptor.class, "MSG_Validating", jTxtLocalFilename.getText())); // NOI18N
                 return false;
             }
-            
-            if (!wsdlValid){
+
+            if (!wsdlValid) {
                 wizardDescriptor.putProperty(PROP_ERROR_MESSAGE,
-                        NbBundle.getMessage(WebServiceClientWizardDescriptor.class,"MSG_NotWSI", f.getName()));
+                        NbBundle.getMessage(WebServiceClientWizardDescriptor.class, "MSG_NotWSI", f.getName())); // NOI18N
                 return false;
             }
             // !PW FIXME should also detect if WSDL file has previously been added to
@@ -871,56 +901,56 @@ public final class ClientInfo extends JPanel implements WsdlRetriever.MessageRec
             // unless it turns out the user didn't want to update the service in the
             // first place.
         }
-        
+
         final String packageName = getPackageName();
-        if(packageName == null || packageName.length() == 0) {
+        if (packageName == null || packageName.length() == 0) {
             wizardDescriptor.putProperty(PROP_ERROR_MESSAGE, NbBundle.getMessage(ClientInfo.class, "MSG_EnterJavaPackageName")); // NOI18N
             return false; // unspecified WSDL file
         }
-        
-        if(!isJavaPackage(packageName)) {
+
+        if (!isJavaPackage(packageName)) {
             wizardDescriptor.putProperty(PROP_ERROR_MESSAGE, NbBundle.getMessage(ClientInfo.class, "ERR_PackageInvalid")); // NOI18N
             return false; // invalid package name
         }
-        
+
         final String clientName = jTxtClientName.getText().trim();
-        if (!isValidTypeIdentifier(clientName)){
-            if ("".equals(clientName)){
+        if (!isValidTypeIdentifier(clientName)) {
+            if ("".equals(clientName)) { // NOI18N
                 wizardDescriptor.putProperty(PROP_ERROR_MESSAGE,
-                        NbBundle.getMessage(WebServiceClientWizardDescriptor.class,"MSG_NoName"));
+                        NbBundle.getMessage(WebServiceClientWizardDescriptor.class, "MSG_NoName")); // NOI18N
             } else {
                 wizardDescriptor.putProperty(PROP_ERROR_MESSAGE,
-                        NbBundle.getMessage(WebServiceClientWizardDescriptor.class,"MSG_InvalidName"));
+                        NbBundle.getMessage(WebServiceClientWizardDescriptor.class, "MSG_InvalidName")); // NOI18N
             }
             return false;
-        } else if (isClientExists()){
+        } else if (isClientExists()) {
             wizardDescriptor.putProperty(PROP_ERROR_MESSAGE,
-                    NbBundle.getMessage(WebServiceClientWizardDescriptor.class,"MSG_AlreadyExists", jTxtCreatedFile.getText()));
+                    NbBundle.getMessage(WebServiceClientWizardDescriptor.class, "MSG_AlreadyExists", jTxtCreatedFile.getText())); // NOI18N
             return false;
         }
         wizardDescriptor.putProperty(PROP_ERROR_MESSAGE, " "); //NOI18N
-        
+
         return true;
     }
-    
+
     private static boolean isValidTypeIdentifier(final String ident) {
-        if (ident == null || "".equals(ident) || !Utilities.isJavaIdentifier(ident)) {
+        if (ident == null || "".equals(ident) || !Utilities.isJavaIdentifier(ident)) { // NOI18N
             return false;
-        } 
+        }
         return true;
     }
-    
-    private boolean isClientExists(){
+
+    private boolean isClientExists() {
         return new File(jTxtCreatedFile.getText()).exists();
     }
-    
-    private boolean isWsCompileSupported(@SuppressWarnings("unused")
-	final Project p) {
+
+    private boolean isWsCompileSupported(@SuppressWarnings("unused") // NOI18N
+            final Project p) {
         // Determine if wscompile is supported by the current target server of
         // this project.  Default to true so that the user can still continue, if on
         // their own, in case we have difficulty getting the correct answer.
         final boolean result = true;
-        
+
 //        J2eeModuleProvider provider = (J2eeModuleProvider) p.getLookup().lookup(J2eeModuleProvider.class);
 //        if(provider != null) {
 //            String serverInstanceID = provider.getServerInstanceID();
@@ -931,47 +961,48 @@ public final class ClientInfo extends JPanel implements WsdlRetriever.MessageRec
 //                }
 //            }
 //        }
-        
+
         return result;
     }
-    
+
     protected void wsdlUrlChanged() {
         // Throw away any existing retriever.  New URL means user has to download it again.
         retriever = null;
-        if (rp != null){
+        if (rp != null) {
             rp.stop();
         }
         rp = null;
-        
+
         // Only enable retrieval button if there is a URL specified.
         final String wsdlUrlText = jTxtWsdlURL.getText().trim();
         jBtnGetWsdl.setEnabled(isValidUrl(wsdlUrlText));
-        
+
         updateHelperValues();
         updateTexts();
     }
-    
+
     protected void updateTexts() {
-        if(!settingFields) {
+        if (!settingFields) {
             final Object editorComponent = jCbxPackageName.getEditor().getEditorComponent();
-            if (editorComponent instanceof JTextComponent){
-                final String created = FileUtil.toFile(root).getAbsolutePath() +
-                        "/" + ((JTextComponent)editorComponent).getText().replace('.', '/') +
-                        "/" + jTxtClientName.getText().replace('.', '/');
-                if (jTxtClientName.getText().trim().length() != 0)
-                    jTxtCreatedFile.setText(created + ".wsclient");
-                else
+            if (editorComponent instanceof JTextComponent) {
+                final String created = FileUtil.toFile(root).getAbsolutePath()
+                        + "/" + ((JTextComponent) editorComponent).getText().replace('.', '/') // NOI18N
+                        + "/" + jTxtClientName.getText().replace('.', '/'); // NOI18N
+                if (jTxtClientName.getText().trim().length() != 0) {
+                    jTxtCreatedFile.setText(created + ".wsclient"); // NOI18N
+                } else {
                     jTxtCreatedFile.setText(created);
+                }
                 descriptorPanel.fireChangeEvent(); // Notify that the panel changed
             }
         }
     }
-    
+
     private boolean isValidUrl(final String urlText) {
-        if(urlText == null || urlText.length() == 0) {
+        if (urlText == null || urlText.length() == 0) {
             return false;
         }
-        
+
         // !PW Be very careful adding conditions to this method (such as seeing if
         // conversion of url text to URL would throw a MalformedURLException and
         // reporting it to the user early.)  It is a non-trivial change that would
@@ -979,172 +1010,175 @@ public final class ClientInfo extends JPanel implements WsdlRetriever.MessageRec
         // as well as the valid() method of this object.  See IZ 52685.
         return true;
     }
-    
+
+    @Override
     public void setWsdlDownloadMessage(final String m) {
         downloadMsg = m;
-        
+
         // reenable edit control if state indicates download is completed (or failed).
-        if(retriever.getState() >= WsdlRetriever.STATUS_COMPLETE) {
+        if (retriever.getState() >= WsdlRetriever.STATUS_COMPLETE) {
             jTxtWsdlURL.setEditable(true);
             jTxtLocalFilename.setText(retriever.getWsdlFileName());
-            
+
             updateHelperValues();
         }
-        
+
         descriptorPanel.fireChangeEvent();
     }
-    
+
     /** Package name validation
      */
     private static boolean isJavaPackage(final String pkg) {
         boolean result = false;
-        
-        if(pkg != null && pkg.length() > 0) {
+
+        if (pkg != null && pkg.length() > 0) {
             int state = 0;
-            for(int i = 0, pkglength = pkg.length(); i < pkglength && state < 2; i++) {
-                switch(state) {
+            for (int i = 0, pkglength = pkg.length(); i < pkglength && state < 2; i++) {
+                switch (state) {
                     case 0:
-                        if(Character.isJavaIdentifierStart(pkg.charAt(i))) {
+                        if (Character.isJavaIdentifierStart(pkg.charAt(i))) {
                             state = 1;
                         } else {
                             state = 2;
                         }
                         break;
                     case 1:
-                        if(pkg.charAt(i) == '.') {
+                        if (pkg.charAt(i) == '.') {
                             state = 0;
-                        } else if(!Character.isJavaIdentifierPart(pkg.charAt(i))) {
+                        } else if (!Character.isJavaIdentifierPart(pkg.charAt(i))) {
                             state = 2;
                         }
                         break;
                 }
             }
-            
-            if(state == 1) {
+
+            if (state == 1) {
                 result = true;
             }
         }
-        
+
         return result;
     }
-    
-    private synchronized boolean checkJSR172Compliant( final File wsdlFile ) {
+
+    private synchronized boolean checkJSR172Compliant(final File wsdlFile) {
         try {
             WSDL2Java.Configuration config = new WSDL2Java.Configuration();
-            config.setWSDLFileName( wsdlFile.toURI().toURL().toString());
-            config.setOriginalWSDLUrl( wsdlFile.toURI().toURL() );
-            WSDL2Java wsdl2java = WSDL2JavaFactory.getWSDL2Java( config );
-            
+            config.setWSDLFileName(wsdlFile.toURI().toURL().toString());
+            config.setOriginalWSDLUrl(wsdlFile.toURI().toURL());
+            WSDL2Java wsdl2java = WSDL2JavaFactory.getWSDL2Java(config);
+
             List<WSDL2Java.ValidationResult> validationResults = wsdl2java.validate();
-            
-            return showValidationResults( validationResults );
-            
-        } catch( IOException e ) {
-            
+
+            return showValidationResults(validationResults);
+
+        } catch (IOException e) {
         }
-        
+
         return true;
     }
-    
-    private synchronized boolean checkJSR172Compliant( final byte[] b ) {
+
+    private synchronized boolean checkJSR172Compliant(final byte[] b) {
         File tempWSDL = null;
         try {
-            tempWSDL = File.createTempFile( "jsr172validate", "wsdl" ); //NOI18N
-            final BufferedOutputStream bos = new BufferedOutputStream( new FileOutputStream( tempWSDL ));
-            bos.write( b );
+            tempWSDL = File.createTempFile("jsr172validate", "wsdl"); //NOI18N
+            final BufferedOutputStream bos = new BufferedOutputStream(new FileOutputStream(tempWSDL));
+            bos.write(b);
             bos.close();
-            
+
             WSDL2Java.Configuration config = new WSDL2Java.Configuration();
-            config.setWSDLFileName( tempWSDL.toURL().toString());
-            config.setOriginalWSDLUrl( new URL(getDownloadUrl()) );
-            WSDL2Java wsdl2java = WSDL2JavaFactory.getWSDL2Java( config );
-            
+            config.setWSDLFileName(tempWSDL.toURL().toString());
+            config.setOriginalWSDLUrl(new URL(getDownloadUrl()));
+            WSDL2Java wsdl2java = WSDL2JavaFactory.getWSDL2Java(config);
+
             List<WSDL2Java.ValidationResult> validationResults = wsdl2java.validate();
-            
-            return showValidationResults( validationResults );
-            
-        } catch( IOException e ) {
-        } catch( Exception e ) {
-//            System.err.println(" --- ----");
-            e.printStackTrace();
+
+            return showValidationResults(validationResults);
+
+        } catch (IOException e) {
+        } catch (Exception e) {
+            Logger.getLogger(this.getClass().getName()).log(Level.WARNING, "Exception: ", e); // NOI18N
         } finally {
-            if( tempWSDL != null ) {
+            if (tempWSDL != null) {
                 tempWSDL.delete();
             }
         }
-        
+
         return true;
     }
-        
-    private boolean showValidationResults( List<WSDL2Java.ValidationResult> validationResults ) {
-        
+
+    private boolean showValidationResults(List<WSDL2Java.ValidationResult> validationResults) {
+
         boolean presentWarnings = false;
         boolean presentErrors = false;
-        
-        for( WSDL2Java.ValidationResult v : validationResults ) {
-            if( v.getErrorLevel() == WSDL2Java.ValidationResult.ErrorLevel.FATAL ) {
+
+        for (WSDL2Java.ValidationResult v : validationResults) {
+            if (v.getErrorLevel() == WSDL2Java.ValidationResult.ErrorLevel.FATAL) {
                 presentErrors = true;
                 break;
             }
-            if( v.getErrorLevel() == WSDL2Java.ValidationResult.ErrorLevel.WARNING ) {
+            if (v.getErrorLevel() == WSDL2Java.ValidationResult.ErrorLevel.WARNING) {
                 presentWarnings = true;
                 break;
             }
         }
-        if( presentWarnings | presentErrors ) {
-            Dialog d = DialogDisplayer.getDefault().createDialog( new DialogDescriptor( new ValidationNotifier( validationResults ), "Validation Results" ));        
-            d.setModal( true );
-            d.setVisible( true );
+        if (presentWarnings | presentErrors) {
+            Dialog d = DialogDisplayer.getDefault().createDialog(new DialogDescriptor(new ValidationNotifier(validationResults), "Validation Results")); // NOI18N
+            d.setModal(true);
+            d.setVisible(true);
         }
-        
+
         return !presentErrors;
     }
-    
+
     private void updateHelperValues() {
         String possibleClientName;
-        if(wsdlSource == WSDL_FROM_SERVICE) {
+        if (wsdlSource == WSDL_FROM_SERVICE) {
             possibleClientName = retriever != null ? retriever.getWsdlFileName() : ""; //NOI18N
         } else {
             possibleClientName = jTxtWsdlFile.getText();
-            possibleClientName = possibleClientName.replace('\\','/'); //NOI18N
-            
-            if (possibleClientName.lastIndexOf('/') != -1){
-                possibleClientName = possibleClientName.substring(possibleClientName.lastIndexOf('/') + 1);
+            possibleClientName = possibleClientName.replace('\\', '/'); //NOI18N
+
+            if (possibleClientName.lastIndexOf('/') != -1) { // NOI18N
+                possibleClientName = possibleClientName.substring(possibleClientName.lastIndexOf('/') + 1); // NOI18N
             }
         }
-        if (possibleClientName == null || possibleClientName.length() == 0){
+        if (possibleClientName == null || possibleClientName.length() == 0) {
             return;
         }
-        
-        if (possibleClientName.indexOf('.') != -1)
-            possibleClientName = possibleClientName.substring(0, possibleClientName.indexOf('.'));
-        
+
+        if (possibleClientName.indexOf('.') != -1) {
+            possibleClientName = possibleClientName.substring(0, possibleClientName.indexOf('.')); // NOI18N
+        }
+
         //if (jTxtClientName.getText().trim().length() == 0 ){
         jTxtClientName.setText(possibleClientName);
         //}
         final Object editorComponent = jCbxPackageName.getEditor().getEditorComponent();
-        if (editorComponent instanceof JTextComponent){
+        if (editorComponent instanceof JTextComponent) {
             //if(((JTextComponent)editorComponent).getText().trim().length() == 0 ){
-            ((JTextComponent)editorComponent).setText(possibleClientName.toLowerCase());
+            ((JTextComponent) editorComponent).setText(possibleClientName.toLowerCase());
             //}
         }
     }
-    
+
     private static class WsdlFileFilter extends FileFilter {
+
         WsdlFileFilter() {
             //to avoid creation of accessor class
         }
-        
+
+        @Override
         public boolean accept(final File f) {
             boolean result;
-            if(f.isDirectory() || "wsdl".equalsIgnoreCase(FileUtil.getExtension(f.getName()))) { // NOI18N
+            if (f.isDirectory() || "wsdl".equalsIgnoreCase(FileUtil.getExtension(f.getName()))) { // NOI18N
                 result = true;
             } else {
                 result = false;
             }
             return result;
         }
-        
+
+        @Override
         public String getDescription() {
             return NbBundle.getMessage(ClientInfo.class, "LBL_WsdlFilterDescription"); // NOI18N
         }
